# bytes-radar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  build.js  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: bench.yml  ci.yml  cloudflare.yml  release-drafter.yml  release.yml  wasm.yml
docs/: CLI_USAGE.md  CONTRIBUTING.md  DEPLOYMENT.md  wasm.md
examples/: README.md  basic_analysis.rs  compare_repositories.rs  custom_analysis.rs  github_token_analysis.rs
server/: build.js  package.json  pnpm-lock.yaml  tsconfig.json  types.d.ts  worker.ts  wrangler.build.toml  wrangler.toml
src/: languages.json  lib.rs  main.rs  worker.rs
src/cli/: args.rs  mod.rs  output.rs  progress.rs  url_parser.rs
src/core/: analysis.rs  error.rs  filter.rs  mod.rs  net.rs  registry.rs
src/net/: mod.rs  stream.rs  traits.rs
src/net/providers/: archive.rs  azure_devops.rs  bitbucket.rs  codeberg.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  sourceforge.rs
src/server/: mod.rs
tests/: README.md  analysis_tests.rs  cli_tests.rs  integration_tests.rs
wasm/: package.json  tsconfig.json
wasm/src/: index.ts  types.ts
worker/: build.js  cache.ts  package.json  tsconfig.json  types.d.ts  worker.ts
